Finish wrapping all of the APIs in the demo

--- a/gitxx/BUILD
+++ b/gitxx/BUILD
@@ -20,11 +20,16 @@ gitxx_cc_library(
         "errors.cpp",
         "errors_mapping.inl",
         "global.cpp",
+        "oid.cpp",
+        "refs.cpp",
         "repository.cpp",
     ],
     hdrs = [
         "errors.hpp",
         "global.hpp",
+        "oid.hpp",
+        "oid_static_string.hpp",
+        "refs.hpp",
         "repository.hpp",
         "unique_ptr.hpp",
     ],
