Improve repository tests to test emptiness

--- a/gitxx/tests/BUILD
+++ b/gitxx/tests/BUILD
@@ -6,6 +6,7 @@ gitxx_cc_test(
     data = ["@libgit2//:test_resources"],
     deps = [
         "//gitxx",
+        "//test:check_invoke_nothrow",
         "@catch2//:catch2_main",
         "@fmt",
     ],
