Reconstruct full blamed file and list hunks at the start of each

--- a/gitxx/BUILD
+++ b/gitxx/BUILD
@@ -17,20 +17,31 @@ cmake(
 gitxx_cc_library(
     name = "gitxx",
     srcs = [
+        "blame.cpp",
+        "blob.cpp",
+        "commit.cpp",
         "errors.cpp",
         "errors_mapping.inl",
         "global.cpp",
         "oid.cpp",
         "refs.cpp",
         "repository.cpp",
+        "signature.cpp",
+        "tree.cpp",
     ],
     hdrs = [
+        "blame.hpp",
+        "blame.inl",
+        "blob.hpp",
+        "commit.hpp",
         "errors.hpp",
         "global.hpp",
         "oid.hpp",
         "oid_static_string.hpp",
         "refs.hpp",
         "repository.hpp",
+        "signature.hpp",
+        "tree.hpp",
         "unique_ptr.hpp",
     ],
     visibility = ["//visibility:public"],
