--- a/gitxx/tests/BUILD
+++ b/gitxx/tests/BUILD
@@ -1,6 +1,4 @@
-load("//gitxx:rules_cc.bzl", "gitxx_cc_test")
-
-gitxx_cc_test(
+cc_test(
     name = "repository_test",
     srcs = ["repository_test.cpp"],
     data = ["@libgit2//:test_resources"],
@@ -12,7 +10,7 @@ gitxx_cc_test(
     ],
 )
 
-gitxx_cc_test(
+cc_test(
     name = "refs_test",
     srcs = ["refs_test.cpp"],
     data = ["@libgit2//:test_resources"],
