--- a/.bazelrc
+++ b/.bazelrc
@@ -1,6 +1,9 @@
 common --enable_bzlmod
 
 build --cxxopt=-std=c++20
+build --host_cxxopt=-std=c++20
+
+build --per_file_copt=//.*\.(cc|cpp|cxx|h|hpp|hxx)@-Werror,-Wall,-Wextra
 
 build:optimized -c opt
 build:optimized --copt=-O3
